Add semantic elements to all templates

--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col mt-5">
-                    <div class="d-flex justify-content-between mb-4 mt-lg-5">
+                    <section class="d-flex justify-content-between mb-4 mt-lg-5">
                     <h2 class="logo-font">FAQs</h2>
                     {% if request.user.is_superuser %}
                         <div class="gtb-button text-right">
@@ -23,7 +23,7 @@
                             </a>	
                         </div>
                     {% endif %}
-                </div>
+                    </section>
                     <hr>
                     <p><em>Can't find an answer to your question? Give us a call on 01782 555 123, email us at 
                         doublewhammyguitars@gmail.com or visit our <a href="{% url 'contact' %}">Contact Us</a> page.</em>
@@ -35,22 +35,26 @@
             <div class="row">
                 <div class="col">
                     {% for faq in faqs %}
-                        <div class="row"><div class="col-12"><h3>{{ faq.question }}</h3></div></div>
-                        <br>
-                        <div class="row"><div class="col-12"><strong>Answer: </strong>{{ faq.answer }}</div></div>
-                        <div class="row"><div class="col-12"><small><strong>Updated On: </strong>{{ faq.updated_on }}</small></div></div>
-                        {% if request.user.is_superuser %}
-                            <small class="ml-3">
-                                <a class="btn-primary btn-admin" href="{% url 'edit_faq' faq.id %}">Edit</a>
-                                <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-faq_id="{{ faq.id }}">Delete</a>
-                            </small>
-                        {% endif %}
+                        <section>
+                            <h3>{{ faq.question }}</h3>
+                            <br>
+                            <strong>Answer: </strong>{{ faq.answer }}
+                            <div class="mx-auto"><small><strong>Updated On: </strong>{{ faq.updated_on }}</small></div>
+                            {% if request.user.is_superuser %}
+                                <div class="mx-auto">
+                                    <small class="ml-3">
+                                        <a class="btn-primary btn-admin" href="{% url 'edit_faq' faq.id %}">Edit</a>
+                                        <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-faq_id="{{ faq.id }}">Delete</a>
+                                    </small>
+                                </div>
+                            {% endif %}
+                        </section>
                     <hr>
                     {% endfor %}
                 </div>
             </div>
             {% if request.user.is_superuser %}
-                <div class="row">
+                <section class="row">
                     <div class="col">
                         <hr>
                         <h2 class="logo-font mb-4">Add FAQ</h2>
@@ -63,7 +67,7 @@
                             </div>
                         </form>
                     </div>      
-                </div>
+                </section>
             {% endif %}
             <div class="btt-button shadow-sm text-white border-black mb-5">
                 <a class="btt-link d-flex h-100">
