--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,16 +10,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100 h-100-36">
+    <section class="container h-100">
         <div class="row h-100">
             <div class="col-12 my-auto text-center logo-container">
                 <img src="{% static 'images/logo.jpg' %}" alt="double-whammy-guitar-logo" class="home-logo">
             </div>
-            <div class="ml-3">
+            <div class="ml-3 mt-5">
                 <h4>
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">Shop Now</a>
                 </h4>
             </div>
         </div>
-    </div>
+    </section>
 {% endblock %}
