--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -82,7 +82,8 @@
                     <a href="{% url 'products' %}?subcategory=straps" class="dropdown-item">Guitar Straps</a>
                     <a href="{% url 'products' %}?subcategory=plectrums" class="dropdown-item">Plectrums</a>
                     <a href="{% url 'products' %}?subcategory=capos" class="dropdown-item">Capos</a>
-                    <a href="{% url 'products' %}?subcategory=straps,plectrums,capos" class="dropdown-item">All Accessories</a>
+                    <a href="{% url 'products' %}?subcategory=strings" class="dropdown-item">Strings</a>
+                    <a href="{% url 'products' %}?subcategory=straps,plectrums,capos,strings" class="dropdown-item">All Accessories</a>
                 </div>
             </li>
         </ul>
