--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-lg-7">
+            <section class="col-12 col-lg-7">
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
