--- a/faqs/templates/faqs/edit_faq.html
+++ b/faqs/templates/faqs/edit_faq.html
@@ -17,14 +17,16 @@
                     <div class="col mt-5">
                         <h2 class="logo-font mb-4 mt-lg-5">Edit FAQ</h2>
                         <hr>
-                        <form method="POST" action="{% url 'edit_faq' faq.id %}" class="form mb-2" enctype="multipart/form-data">
-                            {% csrf_token %}
-                                {{ form | crispy }}
-                            <div class="text-right">
-                                <a class="btn btn-dark" href="{% url 'faqs' %}">Cancel</a>
-                                <button class="btn btn-orange " type="submit">Save Changes</button>
-                            </div>
-                        </form>
+                        <section>
+                            <form method="POST" action="{% url 'edit_faq' faq.id %}" class="form mb-2" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                    {{ form | crispy }}
+                                <div class="text-right">
+                                    <a class="btn btn-dark" href="{% url 'faqs' %}">Cancel</a>
+                                    <button class="btn btn-orange " type="submit">Save Changes</button>
+                                </div>
+                            </form>
+                        </section>
                     </div>      
                 </div>  
             {% endif %}       
