--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-6">
+            <section class="col-12 col-md-6">
                 <form method="POST" action="{% url 'add_product' %}" class="form product-form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
@@ -36,7 +36,7 @@
                         <button class="btn btn-orange " type="submit">Add Product</button>
                     </div>
                 </form>
-            </div>            
+            </section>            
         </div>
     </div>
 {% endblock %}
