--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -17,24 +17,24 @@
 <div class="overlay"></div>
 <div class="container-fluid">
     <div class="row my-lg-5">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <section class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if "placeholder" in product.image.url %}
-                <a href="https://www.crescendo.co.za/wp-content/uploads/2025/01/placeholder-guiter-image.png" target="_blank">
-                    <div class="product-image-container detail-image-container">
-                        <img class="card-img-top img-fluid product-image" src="{% static 'images\placeholder.png' %}" alt="{{ product.name }}">
-                    </div>
-                </a>
+                    <a href="https://www.crescendo.co.za/wp-content/uploads/2025/01/placeholder-guiter-image.png" target="_blank">
+                        <div class="product-image-container detail-image-container">
+                            <img class="card-img-top img-fluid product-image" src="{% static 'images\placeholder.png' %}" alt="{{ product.name }}">
+                        </div>
+                    </a>
                 {% else %}
-                <a href="{% url 'product_detail' product.id %}">
-                    <div class="product-image-container detail-image-container {% if product.category.id == 1 %}guitar-detail{% endif %}">
-                        <img class="card-img-top img-fluid product-image" src="{{ product.image.url }}" alt="{{ product.name }}">
-                    </div>
-                </a>
+                    <a href="{% url 'product_detail' product.id %}">
+                        <div class="product-image-container detail-image-container {% if product.category.id == 1 %}guitar-detail{% endif %}">
+                            <img class="card-img-top img-fluid product-image" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        </div>
+                    </a>
                 {% endif %}
             </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        </section>
+        <section class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
                 <h2 class="mb-0">{{ product.name }}</h2>
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
@@ -57,7 +57,9 @@
                 {% endif %}
                 <h3 class="my-3">Product Description</h3>
                 <hr>
-                <p class="mt-3">{{ product.description }}</p>
+                <article>
+                    <p class="mt-3">{{ product.description }}</p>
+                </article>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -99,7 +101,7 @@
                     </div>
                 </form>
             </div>
-        </div>
+        </section>
     </div>
     <!-- Delete confirmation modal -->
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
