--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -52,9 +52,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="row">
+                <section class="row">
                     {% for product in products %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <article class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 
                                     {% if "placeholder" in product.image.url %}
@@ -102,7 +102,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </article>
                         {% if forloop.counter|divisibleby:1 %}
                             <div class="col-12 d-sm-none mb-5">
                                 <hr>
@@ -124,7 +124,7 @@
                             </div>
                         {% endif %}
                     {% endfor %}
-                </div>
+                </section>
             </div>
         </div>
         <!-- Delete confirmation modal -->
