--- a/templates/base.html
+++ b/templates/base.html
@@ -182,12 +182,11 @@
   {% block page_header %}
   {% endblock %}
 
-  <div class="top-spacer"></div>
-  
+  <main class="pb-5 pt-lg-1 mt-5">
   {% block content %}
   {% endblock %}
+  </main>
 
-  <div class="bottom-spacer"></div>
   <footer class="container-fluid fixed-bottom">
     <div class="row bg-dark pt-lg-2 d-flex bg-dark">
         <div class="col-12 d-flex justify-content-center align-items-center">
