Add headings to sections & articles

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -26,6 +26,7 @@
 
         <div class="row">
             <section class="col-12 col-lg-7">
+                <h3 class="d-none">Order Confirmation</h3>
                 <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
