--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -26,7 +26,7 @@
 
         <div class="row">
             <section class="col-12 col-lg-6 order-lg-last mb-5">
-                <p class="text-muted">Order Summary ({{ product_count }})</p>
+                <h6 class="text-muted">Order Summary ({{ product_count }})</h6>
                 <div class="row">
                     <div class="col-7 offset-2">
                         <p class="mb-1 mt-0 small text-muted">Item</p>
@@ -37,6 +37,7 @@
                 </div>
                 {% for item in bag_items %}
                     <article class="row">
+                        <h3 class="d-none">Line Item</h3>
                         <div class="col-2 mb-1">
                             <a href="{% url 'product_detail' item.product.id %}">
                                 {% if "placeholder" in item.product.image.url %}
@@ -72,6 +73,7 @@
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the form below to complete your order</p>
                 <section>
+                    <h2 class="d-none">Personal Info</h2>
                     <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                         {% csrf_token %}
                         <fieldset class="rounded px-3 mb-5">
