--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -22,6 +22,7 @@
 
         <div class="row">
             <section class="col-12 col-md-6">
+                <h5 class="d-none">Add a Product</h5>
                 <form method="POST" action="{% url 'add_product' %}" class="form product-form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
