--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,6 +18,7 @@
 <div class="container-fluid">
     <div class="row my-lg-5">
         <section class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            <h2 class="d-none">{{ product.name }}</h2>
             <div class="image-container my-5">
                 {% if "placeholder" in product.image.url %}
                     <a href="https://www.crescendo.co.za/wp-content/uploads/2025/01/placeholder-guiter-image.png" target="_blank">
@@ -35,6 +36,7 @@
             </div>
         </section>
         <section class="col-12 col-md-6 col-lg-4">
+            <h2 class="d-none">Product Info</h2>
             <div class="product-details-container mb-5 mt-md-5">
                 <h2 class="mb-0">{{ product.name }}</h2>
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
@@ -55,9 +57,9 @@
                         <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-product_id="{{ product.id }}">Delete</a>
                     </small>
                 {% endif %}
-                <h3 class="my-3">Product Description</h3>
-                <hr>
                 <article>
+                    <h3 class="my-3">Product Description</h3>
+                    <hr>
                     <p class="mt-3">{{ product.description }}</p>
                 </article>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
