--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -53,8 +53,10 @@
                     </div>
                 </div>
                 <section class="row">
+                    <h3 class="d-none">Double Whammy Guitars</h3>
                     {% for product in products %}
                         <article class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <h4 class="d-none">{{ product.name }}</h4>
                             <div class="card h-100 border-0">
                                 
                                     {% if "placeholder" in product.image.url %}
