--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
               <input class="form-control" type="text" name="q"
                 placeholder="Search our site">
               <div class="input-group-append">
-                <button class="form-control btn" type="submit">
+                <button class="form-control btn" type="submit" aria-label="Search">
                   <span class="icon">
                     <i class="fas fa-search"></i>
                   </span>
@@ -144,7 +144,7 @@
             <input class="form-control" type="text" name="q"
               placeholder="Search our site">
             <div class="input-group-append">
-              <button class="form-control btn" type="submit">
+              <button class="form-control btn" type="submit" aria-label="Search">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
@@ -190,10 +190,10 @@
   <footer class="container-fluid fixed-bottom">
     <div class="row bg-dark pt-lg-2 d-flex bg-dark">
         <div class="col-12 d-flex justify-content-center align-items-center">
-            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook text-orange"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram text-orange"></i></a>
-            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-square-youtube text-orange"></i></a>
-            <a href="https://x.com/" target="_blank"><i class="fa-brands fa-square-x-twitter text-orange"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook text-orange"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram text-orange"></i></a>
+            <a href="https://www.youtube.com/" target="_blank" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube text-orange"></i></a>
+            <a href="https://x.com/" target="_blank" aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter text-orange"></i></a>
         </div>
     </div>
   </footer>
