--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -50,7 +50,7 @@
                                                 <div class="form-group">
                                                     <div class="input-group">
                                                         <div class="input-group-prepend">
-                                                                <button class="decrement-qty btn btn-sm" 
+                                                                <button class="decrement-qty btn btn-sm" aria-label="Decrement Quantity"
                                                                 data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                                     <span>
                                                                         <i class="fas fa-minus fa-sm"></i>
@@ -60,9 +60,9 @@
                                                         <input class="form-control form-control-sm qty_input" type="number"
                                                         name="quantity" value="{{ item.quantity }}" min="1" max="99"
                                                         data-item_id="{{ item.item_id }}"
-                                                        id="id_qty_{{ item.item_id }}">
+                                                        id="id_qty_{{ item.item_id }}" aria-label="Quantity Selector">
                                                         <div class="input-group-append">
-                                                            <button class="increment-qty btn btn-sm"
+                                                            <button class="increment-qty btn btn-sm" aria-label="Increment Quantity"
                                                             data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                                 <span>
                                                                     <i class="fas fa-plus fa-sm"></i>
