--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -70,7 +70,7 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn"
+                                        <button class="decrement-qty btn" aria-label="Decrement Quantity"
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
@@ -78,9 +78,10 @@
                                         </button>
                                     </div>
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}"
+                                        aria-label="Quantity Selector">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn"
+                                        <button class="increment-qty btn" aria-label="Increment Quantity"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
