--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -8,7 +8,7 @@
 <h2 class="logo-font mb-4 mt-lg-5">{% trans "Sign Up" %}</h2>
 <hr>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a class="allauth-link" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
