Bug fix - checkout value exceeds max digits

--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             {% if request.user.is_superuser %}
-                <section class="row">
+                <section class="row" id="add-faq-target">
                     <div class="col">
                         <hr>
                         <h2 class="logo-font mb-4">Add FAQ</h2>
