Add description & keyword meta tags for SEO

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Double Whammy Guitars offers premium guitars, accessories, and gear for players of all levels. Shop high-quality instruments, pedals, strings, and more. Built for tone, priced for players.">
+  <meta name="keywords" content="double whammy guitars, guitars, electric guitars, acoustic guitars, bass guitars, guitar amps, guitar pedal, guitar effects pedals, guitar picks, plectrums, capos, guitar accessories, guitars for sale">
   
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}">
