Add blank href to delete buttons for SEO

--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -44,7 +44,7 @@
                                 <div class="mx-auto">
                                     <small class="ml-3">
                                         <a class="btn-primary btn-admin" href="{% url 'edit_faq' faq.id %}">Edit</a>
-                                        <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-faq_id="{{ faq.id }}">Delete</a>
+                                        <a class="btn-danger btn-admin delete-btn" href="#" aria-label="delete" data-faq_id="{{ faq.id }}">Delete</a>
                                     </small>
                                 </div>
                             {% endif %}
