--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -97,7 +97,7 @@
                                                 {% if request.user.is_superuser %}
                                                     <small class="ml-3">
                                                         <a class="btn-primary btn-admin" href="{% url 'edit_product' product.id %}">Edit</a>
-                                                        <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-product_id="{{ product.id }}">Delete</a>
+                                                        <a class="btn-danger btn-admin delete-btn" href="#" aria-label="delete" data-product_id="{{ product.id }}">Delete</a>
                                                     </small>
                                                 {% endif %}
                                         </div>
@@ -154,7 +154,7 @@
         </div>
     </div>
     <div class="btt-button shadow-sm text-white border-black mb-5">
-        <a class="btt-link d-flex h-100">
+        <a class="btt-link d-flex h-100" href="#" aria-label="Back to top">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>	
     </div>
