Add blank href to faq page buttons for SEO

--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -18,7 +18,7 @@
                     <h2 class="logo-font">FAQs</h2>
                     {% if request.user.is_superuser %}
                         <div class="gtb-button text-right">
-                            <a class="btn btn-orange gtb-link">
+                            <a class="btn btn-orange gtb-link" href="#">
                                 <i class="fas fa-arrow-down mx-auto my-auto"></i> Add FAQ
                             </a>	
                         </div>
@@ -70,7 +70,7 @@
                 </section>
             {% endif %}
             <div class="btt-button shadow-sm text-white border-black mb-5">
-                <a class="btt-link d-flex h-100">
+                <a class="btt-link d-flex h-100" href="#">
                     <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
                 </a>	
             </div>
