--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -70,7 +70,7 @@
                 </section>
             {% endif %}
             <div class="btt-button shadow-sm text-white border-black mb-5">
-                <a class="btt-link d-flex h-100" href="#">
+                <a class="btt-link d-flex h-100" href="#" aria-label="Back to top">
                     <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
                 </a>	
             </div>
