--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-12 col-md-6 mt-5">
                 <h2 class="logo-font mb-4 mt-lg-5">Product Management</h2>
-                <h5 class="text-muted">Add a Product</h5>
+                <h3 class="text-muted">Add a Product</h3>
                 <hr>
             </div>
         </div>
@@ -29,6 +29,7 @@
                         {% if field.name != 'image' %}
                             {{ field | as_crispy_field }}
                         {% else %}
+                            {{ field.label_tag }}
                             {{ field }}
                         {% endif %}
                     {% endfor %}
