--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-12 col-md-6 mt-5">
                 <h2 class="logo-font mb-4 mt-lg-5">Product Management</h2>
-                <h5 class="text-muted">Edit a Product</h5>
+                <h3 class="text-muted">Edit a Product</h3>
                 <hr>
             </div>
         </div>
@@ -27,11 +27,14 @@
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form product-form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
-                        {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
-                        {% else %}
-                            {{ field }}
-                        {% endif %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        <div class="form-group">
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            <input type="file" name="{{ field.html_name }}" id="{{ field.id_for_label }}" class="form-control">
+                        </div>
+                    {% endif %}
                     {% endfor %}
                     <div class="text-right mt-3">
                         <a class="btn btn-dark text-white" href="{% url 'products' %}">Cancel</a>
