Change text color on 404 page for accessibility

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,6 +33,10 @@ h4, h5, h6 {
     color: #FF4500;
 }
 
+.text-404 {
+    color: #6c757d;
+}
+
 /* Header --------------------------------------------------*/
 
 .logo {
