--- a/templates/404.html
+++ b/templates/404.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
+        <div class="row text-404">
             <div class="col-12 mt-5">
                 <h2 class="logo-font mb-4 mt-lg-5">404 - Total String Outage</h2>
                 <hr>
@@ -22,7 +22,7 @@
 
                 <p>Here's a few things you can try:</p>
                 <ul>
-                <li>Head back to the <a href="{% url 'home' %}">main stage</a>.</li>
+                <li>Head back to the <a class="text-primary" href="{% url 'home' %}">main stage</a>.</li>
                 <li>Check out our collection of <a href="{% url 'products' %}">Axes & AXE-essories</a>.</li>
                 <li>Try tuning your URL</li>
                 </ul>
