Remove text-primary class from 404 page link

--- a/templates/404.html
+++ b/templates/404.html
@@ -22,7 +22,7 @@
 
                 <p>Here's a few things you can try:</p>
                 <ul>
-                <li>Head back to the <a class="text-primary" href="{% url 'home' %}">main stage</a>.</li>
+                <li>Head back to the <a href="{% url 'home' %}">main stage</a>.</li>
                 <li>Check out our collection of <a href="{% url 'products' %}">Axes & AXE-essories</a>.</li>
                 <li>Try tuning your URL</li>
                 </ul>
