--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -77,7 +77,7 @@
                                         </div>                    
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">£{{ item.product.price }}</p>
+                                        <p class="my-0">£{{ item.subtotal }}</p>
                                     </td>
                                 </tr>                                 
                                 <tr>
