Remove dropdown from amps link

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -33,12 +33,9 @@
             </li>
 
             <li class="nav-item dropdown">
-                <a class="logo-font font-weight-bold nav-link text-white mr-5 hover" href="#" id="amps-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="logo-font font-weight-bold nav-link text-white mr-5 hover" href="{% url 'products' %}?category=amps" id="amps-link" aria-haspopup="true" aria-expanded="false">
                     Amps
                 </a>
-                <div class="dropdown-menu border-0 bg-dark" aria-labelledby="amps-link">
-                    <a href="{% url 'products' %}?category=amps" class="dropdown-item">All Amps</a>
-                </div>
             </li>
 
             <li class="nav-item dropdown">
