--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   {% block meta %}
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
+  <title>Double Whammy Guitars</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Double Whammy Guitars offers premium guitars, accessories, and gear for players of all levels. Shop high-quality instruments, pedals, strings, and more. Built for tone, priced for players.">
   <meta name="keywords" content="double whammy guitars, guitars, electric guitars, acoustic guitars, bass guitars, guitar amps, guitar pedal, guitar effects pedals, guitar picks, plectrums, capos, guitar accessories, guitars for sale">
